Learned about second level cache and resolved all the issues

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
+
 
     </dependencies>
 
